sass/conditionals/club-landing-list.sass
@charset "UTF-8"

// IMPORT COMPASS AND EXTENSIONS
@import compass
@import breakpoint
@import ../../fonts/icons/icons
@import partials/base/00-variables/all
@import partials/base/03-extend/gsb-revamp

// Club node teaserstyling
.node-club.view-mode-teaser
  padding: 0

  // Title field
  h5
    font-family: $font-sans
    font-size: 20px
    font-weight: bold
    line-height: 1.2
    margin: 0 0 12px 0
    +breakpoint(850px max-width)
      font-size: 18px

  // Description
  .field-name-field-body
    font-size: 16px
    line-height: 1.2
    margin: 4px 0 8px

  // Email
  .field-name-field-email
    a
      +icon-after("email-stroke", true)
      &:after
        font-size: 12px
        line-height: 0
        margin-left: 0.3em

// Clubs - Non-customizable listings
.view-display-id-club_list,
.view-display-id-search_club
  border-top: 0
  margin-bottom: 30px

  .views-row
    border-bottom: 1px solid $text-black
    &:last-of-type
      border-bottom: 0
    &:first-of-type
      h5
        margin-top: 0

// Customizable clubs list
.view-display-id-club_by_id_or_tag
  +clearfix
  .views-row
    padding: 0 $standard-padding
    &:last-of-type
      border-bottom: 0

  // See all clubs link
  .more-link
    float: right
    height: 30px
    min-width: 160px
    text-align: left
    a
      display: block
      font-size: 18px
      font-weight: bold
      position: relative
      +icon-after("arrow-double-right", true)
      &:after
        @extend %arrow-double-big


// Alumni Clubs pane - non-customizable
.pane-club-filters-club-alumni-list
  @extend %bg-and-box-shadow
  // For position absolute pager region to remove background
  margin-bottom: 58px !important
  .pane-title
    @extend %black-border-top
    color: $text-black
    font-size: 22px
    font-weight: normal
    margin: 0 26px
    padding-top: 10px
    padding-top: 5px

// Alumni clubs list - Titles only
.view-display-id-club_alumni_list
  // Container
  .views-row
    @extend %divider-bottom
    padding: 13px $standard-padding 10px

  // Title
  .views-field-title
    font-family: $font-sans
    font-size: 18px
    font-weight: bold
    line-height: 1.2
    a
      &:after
        font-size: 12px

  // Pager adjustment
  .pager-region
    margin-bottom: 0
    margin-top: -1px
    position: absolute
    width: 570px

